// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binder should-work-with-arrays - locals 1`] = `Array []`;

exports[`Binder should-work-with-arrays - members 1`] = `Array []`;

exports[`Binder should-work-with-binary-shorthand - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
      Object {
        "declarationPos": 10,
        "flags": "Variable",
        "name": "y",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-binary-shorthand - members 1`] = `Array []`;

exports[`Binder should-work-with-break-and-continue - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-break-and-continue - members 1`] = `Array []`;

exports[`Binder should-work-with-function - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Function",
        "name": "f",
      },
    ],
  },
  Object {
    "kind": "FunctionStatement",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 7,
        "flags": "Parameter",
        "name": "x",
      },
      Object {
        "declarationPos": 10,
        "flags": "Parameter",
        "name": "y",
      },
      Object {
        "declarationPos": 13,
        "flags": "Parameter",
        "name": "z",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-function - members 1`] = `Array []`;

exports[`Binder should-work-with-function-call - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Function",
        "name": "f",
      },
    ],
  },
  Object {
    "kind": "FunctionStatement",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 7,
        "flags": "Parameter",
        "name": "v",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-function-call - members 1`] = `Array []`;

exports[`Binder should-work-with-function-expression - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "fn",
      },
    ],
  },
  Object {
    "kind": "FunctionExpression",
    "pos": 9,
    "symbols": Array [
      Object {
        "declarationPos": 18,
        "flags": "Parameter",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-function-expression - members 1`] = `Array []`;

exports[`Binder should-work-with-get-shorthand - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-get-shorthand - members 1`] = `Array []`;

exports[`Binder should-work-with-global-variable - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-global-variable - members 1`] = `Array []`;

exports[`Binder should-work-with-if-expression - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-if-expression - members 1`] = `Array []`;

exports[`Binder should-work-with-if-expression-with-if-only - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-if-expression-with-if-only - members 1`] = `Array []`;

exports[`Binder should-work-with-integer - locals 1`] = `Array []`;

exports[`Binder should-work-with-integer - members 1`] = `Array []`;

exports[`Binder should-work-with-local-variable - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Function",
        "name": "foo",
      },
    ],
  },
  Object {
    "kind": "SequenceOfStatements",
    "pos": 16,
    "symbols": Array [
      Object {
        "declarationPos": 16,
        "flags": "Variable",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-local-variable - members 1`] = `Array []`;

exports[`Binder should-work-with-method-call - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "o",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-method-call - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 8,
    "symbols": Array [
      Object {
        "declarationPos": 20,
        "flags": "MethodSlot",
        "name": "f",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-nested-function - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "m",
      },
      Object {
        "declarationPos": 10,
        "flags": "Function",
        "name": "foo",
      },
    ],
  },
  Object {
    "kind": "FunctionStatement",
    "pos": 10,
    "symbols": Array [
      Object {
        "declarationPos": 19,
        "flags": "Parameter",
        "name": "x",
      },
    ],
  },
  Object {
    "kind": "SequenceOfStatements",
    "pos": 27,
    "symbols": Array [
      Object {
        "declarationPos": 27,
        "flags": "Variable",
        "name": "y",
      },
      Object {
        "declarationPos": 41,
        "flags": "Function",
        "name": "bar",
      },
    ],
  },
  Object {
    "kind": "FunctionStatement",
    "pos": 41,
    "symbols": Array [
      Object {
        "declarationPos": 50,
        "flags": "Parameter",
        "name": "z",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-nested-function - members 1`] = `Array []`;

exports[`Binder should-work-with-null - locals 1`] = `Array []`;

exports[`Binder should-work-with-null - members 1`] = `Array []`;

exports[`Binder should-work-with-object-without-extends - locals 1`] = `Array []`;

exports[`Binder should-work-with-object-without-extends - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 12,
        "flags": "VariableSlot",
        "name": "x",
      },
      Object {
        "declarationPos": 27,
        "flags": "MethodSlot",
        "name": "f",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-objects - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "p",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-objects - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 8,
    "symbols": Array [
      Object {
        "declarationPos": 20,
        "flags": "VariableSlot",
        "name": "y",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 32,
    "symbols": Array [
      Object {
        "declarationPos": 47,
        "flags": "VariableSlot",
        "name": "x",
      },
      Object {
        "declarationPos": 62,
        "flags": "MethodSlot",
        "name": "f",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-objects-and-slots - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "p",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-objects-and-slots - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 8,
    "symbols": Array [
      Object {
        "declarationPos": 20,
        "flags": "VariableSlot",
        "name": "y",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 32,
    "symbols": Array [
      Object {
        "declarationPos": 47,
        "flags": "VariableSlot",
        "name": "x",
      },
      Object {
        "declarationPos": 62,
        "flags": "MethodSlot",
        "name": "f",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-printf - locals 1`] = `Array []`;

exports[`Binder should-work-with-printf - members 1`] = `Array []`;

exports[`Binder should-work-with-set-shorthand - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-set-shorthand - members 1`] = `Array []`;

exports[`Binder should-work-with-slot-assignment - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "o",
      },
      Object {
        "declarationPos": 35,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-slot-assignment - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 8,
    "symbols": Array [
      Object {
        "declarationPos": 20,
        "flags": "VariableSlot",
        "name": "field",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 43,
    "symbols": Array [
      Object {
        "declarationPos": 55,
        "flags": "VariableSlot",
        "name": "b",
      },
      Object {
        "declarationPos": 79,
        "flags": "VariableSlot",
        "name": "c",
      },
      Object {
        "declarationPos": 107,
        "flags": "VariableSlot",
        "name": "d",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 63,
    "symbols": Array [
      Object {
        "declarationPos": 79,
        "flags": "VariableSlot",
        "name": "c",
      },
      Object {
        "declarationPos": 107,
        "flags": "VariableSlot",
        "name": "d",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 87,
    "symbols": Array [
      Object {
        "declarationPos": 107,
        "flags": "VariableSlot",
        "name": "d",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-slot-lookup - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "o",
      },
      Object {
        "declarationPos": 35,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-slot-lookup - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 8,
    "symbols": Array [
      Object {
        "declarationPos": 20,
        "flags": "VariableSlot",
        "name": "field",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 43,
    "symbols": Array [
      Object {
        "declarationPos": 55,
        "flags": "VariableSlot",
        "name": "b",
      },
      Object {
        "declarationPos": 79,
        "flags": "VariableSlot",
        "name": "c",
      },
      Object {
        "declarationPos": 107,
        "flags": "VariableSlot",
        "name": "d",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 63,
    "symbols": Array [
      Object {
        "declarationPos": 79,
        "flags": "VariableSlot",
        "name": "c",
      },
      Object {
        "declarationPos": 107,
        "flags": "VariableSlot",
        "name": "d",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 87,
    "symbols": Array [
      Object {
        "declarationPos": 107,
        "flags": "VariableSlot",
        "name": "d",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-arrays - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-arrays - members 1`] = `Array []`;

exports[`Binder should-work-with-type-function-call - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Function",
        "name": "add",
      },
      Object {
        "declarationPos": 57,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
  Object {
    "kind": "FunctionStatement",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 9,
        "flags": "Parameter",
        "name": "x",
      },
      Object {
        "declarationPos": 21,
        "flags": "Parameter",
        "name": "y",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-function-call - members 1`] = `Array []`;

exports[`Binder should-work-with-type-function-expression - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-function-expression - members 1`] = `Array []`;

exports[`Binder should-work-with-type-function-parameter - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Function",
        "name": "foo",
      },
    ],
  },
  Object {
    "kind": "FunctionStatement",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 9,
        "flags": "Parameter",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-function-parameter - members 1`] = `Array []`;

exports[`Binder should-work-with-type-function-statement - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Function",
        "name": "foo",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-function-statement - members 1`] = `Array []`;

exports[`Binder should-work-with-type-integer - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-integer - members 1`] = `Array []`;

exports[`Binder should-work-with-type-method-signature - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "TypeDef",
        "name": "foo",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-method-signature - members 1`] = `
Array [
  Object {
    "kind": "TypeDefDeclaration",
    "name": "foo",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 17,
        "flags": "Variable",
        "name": "a",
      },
      Object {
        "declarationPos": 36,
        "flags": "MethodSlot",
        "name": "f",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-method-slot - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-method-slot - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 8,
    "symbols": Array [
      Object {
        "declarationPos": 20,
        "flags": "VariableSlot",
        "name": "foo",
      },
      Object {
        "declarationPos": 45,
        "flags": "MethodSlot",
        "name": "bar",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-null - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-null - members 1`] = `Array []`;

exports[`Binder should-work-with-type-typedef - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "TypeDef",
        "name": "foo",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-typedef - members 1`] = `
Array [
  Object {
    "kind": "TypeDefDeclaration",
    "name": "foo",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 17,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-variable-reference - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "TypeDef",
        "name": "foo",
      },
      Object {
        "declarationPos": 33,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-variable-reference - members 1`] = `
Array [
  Object {
    "kind": "TypeDefDeclaration",
    "name": "foo",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 17,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 46,
    "symbols": Array [
      Object {
        "declarationPos": 58,
        "flags": "VariableSlot",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-variable-slot - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "a",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-type-variable-slot - members 1`] = `
Array [
  Object {
    "kind": "ObjectsExpression",
    "name": undefined,
    "pos": 8,
    "symbols": Array [
      Object {
        "declarationPos": 20,
        "flags": "VariableSlot",
        "name": "foo",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-variable-assignment - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-variable-assignment - members 1`] = `Array []`;

exports[`Binder should-work-with-variable-reference - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-variable-reference - members 1`] = `Array []`;

exports[`Binder should-work-with-while-expression - locals 1`] = `
Array [
  Object {
    "kind": "SequenceOfStatements",
    "pos": 0,
    "symbols": Array [
      Object {
        "declarationPos": 0,
        "flags": "Variable",
        "name": "x",
      },
      Object {
        "declarationPos": 10,
        "flags": "Variable",
        "name": "y",
      },
    ],
  },
]
`;

exports[`Binder should-work-with-while-expression - members 1`] = `Array []`;
